# ComputerGraphicLearn

./: CMakeLists.txt  README.md
src/: Triangle.cpp  Triangle.h  main.cpp
